--- a/src/index.html
+++ b/src/index.html
@@ -85,9 +85,6 @@
                         <a href="#">МОИ РАБОТЫ</a>
                     </li>
                     <li class="menu__link">
-                        <a href="#">ПРАЙС-ЛИСТ</a>
-                    </li>
-                    <li class="menu__link">
                         <a href="#">КОНТАКТЫ</a>
                     </li>
                 </ul>
@@ -133,11 +130,11 @@
         <div class="container">
             <div class="about__wrapper">
                 <div class="about__photo">
-                    <img src="img/main_photo.jpg" alt="photo"></img>
+                    <img src="img/IMG_20210606_222159.jpg" alt="photo"></img>
                 </div>
                 <div class="about__descr">
                     <h2 class="title title_fz16 about__title">Про меня</h2>
-                    <div class="title title_fs36 about__subtitle">Меня зовут Александра</div>
+                    <div class="title title_fz36 about__subtitle">Меня зовут Валентин</div>
                     <div class="divider"></div>
                     <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                         Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
@@ -251,7 +248,7 @@
         </div>
     </section>
 
-    <div class="skills">
+    <section class="skills">
         <div class="container">
             <h2 class="title title_fz16 title__section-title">Навыки</h2>
             <div class="title title_fz36 title__section-subtitle">Что я использую в работе</div>
@@ -352,87 +349,88 @@
                 </div>
             </div>
         </div>
+    </section>
 
-        <section class="portfolio">
-            <div class="container">
-                <h2 class="title title_fz16 title__section-title">Портфолио</h2>
-                <div class="title title_fz36 title__section-subtitle">Мои работы</div>
-                <div class="divider"></div>
-                <div class="portfolio__wrapper">
-                    <a href="/uber" class="portfolio__item">
-                        <img src="img/works/uber.jpg" alt="uber">
-                    </a>
-                    <a href="/pulse" class="portfolio__item">
-                        <img src="img/works/pulse.jpg" alt="pulse">
-                    </a>
-                    <a href="#" class="portfolio__item">
-                        <img src="img/works/bread.jpg" alt="bread">
-                    </a>
-                    <a href="#" class="portfolio__item vertical">
-                        <img src="img/works/plans.jpg" alt="plans">
-                    </a>
-                    <a href="#" class="portfolio__item">
-                        <img src="img/works/ipad.jpg" alt="ipad">
-                    </a>
-                    <a href="#" class="portfolio__item horizontal">
-                        <img src="img/works/mac.jpg" alt="mac">
-                    </a>
+    <section class="portfolio">
+        <div class="container">
+            <h2 class="title title_fz16 title__section-title">Портфолио</h2>
+            <div class="title title_fz36 title__section-subtitle">Мои работы</div>
+            <div class="divider"></div>
+            <div class="portfolio__wrapper">
+                <a href="/uber" class="portfolio__item">
+                    <img src="img/works/uber.jpg" alt="uber">
+                </a>
+                <a href="/pulse" class="portfolio__item">
+                    <img src="img/works/pulse.jpg" alt="pulse">
+                </a>
+                <a href="#" class="portfolio__item">
+                    <img src="img/works/code-computer.jpg" alt="code">
+                </a>
+                <a href="#" class="portfolio__item vertical">
+                    <img src="img/works/samurai.jpg" alt="samurai">
+                </a>
+                <a href="#" class="portfolio__item">
+                    <img src="img/works/astronaft.jpg" alt="astronaft">
+                </a>
+                <a href="#" class="portfolio__item horizontal">
+                    <img src="img/works/Car.jpg" alt="car">
+                </a>
+            </div>
+        </div>
+    </section>
+    <section class="contacts">
+        <div class="container">
+            <div class="contacts__wrapper">
+                <div class="contacts__photo">
+                    <img src="img/I2.jpg" alt="photo"></img>
+                </div>
+                <div class="contacts__descr">
+                    <h2 class="title title_fz16 contacts__title">Контакты</h2>
+                    <div class="title title_fz36 contacts__subtitle">Свяжитесь со мной</div>
+                    <div class="divider"></div>
+                    <div class="title title_fz14 contacts__text">Любым удобным для вас способом:
+                    </div>
+                    <div class="contacts__social">
+                        <a href="#" class="contacts__link">
+                            <img src="icons/social/Facebook.svg" alt="facebook">
+                        </a>
+                        <a href="#" class="contacts__link">
+                            <img src="icons/social/telegram.svg" alt="telegram">
+                        </a>
+                        <a href="#" class="contacts__link">
+                            <img src="icons/social/instagram.svg" alt="instagram">
+                        </a>
+                    </div>
+                    <div class="title title_fz14 contacts__text">Или оставьте ваши данные и я сама вам напишу:
+                    </div>
+
+                    <form action="#" class="contacts__form">
+                        <div class="contacts__input">
+                            <input required name="name" id="name" type="text">
+                            <label for="name">Ваше имя</label>
+                        </div>
+                        <div class="contacts__input">
+                            <input required name="email" id="email" type="email">
+                            <label for="email">Ваша почта</label>
+                        </div>
+                        <div class="contacts__textarea">
+                            <textarea name="text" id="text"></textarea>
+                            <label for="text">Ваше сообщение</label>
+                        </div>
+                        <div class="contacts__triggers">
+                            <button class="contacts__btn btn">Отправить сообщение</button>
+                            <div class="contacts__policy">
+                                <input required type="checkbox">
+                                <span>Я согласен(а) с <a href="/policy.html">политикой конфиденциальности</a> </span>
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
-        </section>
-        <section class="contacts">
-            <div class="container">
-                <div class="contacts__wrapper">
-                    <div class="contactst__photo">
-                        <img src="img/main_photo.jpg" alt="photo"></img>
-                    </div>
-                    <div class="contacts__descr">
-                        <h2 class="title title_fz16 contacts__title">Контакты</h2>
-                        <div class="title title_fz36 contacts__subtitle">Свяжитесь со мной</div>
-                        <div class="divider"></div>
-                        <div class="title title_fz14 contacts__text">Любым удобным для вас способом:
-                        </div>
-                        <div class="contacts__social">
-                            <a href="#" class="contacts__link">
-                                <img src="icons/social/Facebook.svg" alt="facebook">
-                            </a>
-                            <a href="#" class="contacts__link">
-                                <img src="icons/social/telegram.svg" alt="telegram">
-                            </a>
-                            <a href="#" class="contacts__link">
-                                <img src="icons/social/instagram.svg" alt="instagram">
-                            </a>
-                        </div>
-                        <div class="title title_fz14 contacts__text">Или оставьте ваши данные и я сама вам напишу:
-                        </div>
+        </div>
+    </section>
 
-                        <form action="#" class="contacts__form">
-                            <div class="contacts__input">
-                                <input required name="name" id="name" type="text">
-                                <label for="name">Ваше имя</label>
-                            </div>
-                            <div class="contacts__input">
-                                <input required name="email" id="email" type="email">
-                                <label for="email">Ваша почта</label>
-                            </div>
-                            <div class="contacts__textarea">
-                                <textarea name="text" id="text"></textarea>
-                                <label for="text">Ваше сообщение</label>
-                            </div>
-                            <div class="contacts__triggers">
-                                <button class="contacts__btn btn">Отправить сообщение</button>
-                                <div class="contacts__policy">
-                                    <input required type="checkbox">
-                                    <span>Я согласен(а) с <a href="/policy.html">политикой конфиденциальности</a> </span>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <script src="js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
